[gd_scene load_steps=16 format=3 uid="uid://c25ubka6p10j7"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_6t6tr"]
[ext_resource type="Material" uid="uid://bn7ofed0rqhme" path="res://UI/pause_menu.tres" id="2_2xruh"]
[ext_resource type="FontFile" uid="uid://detchx777p265" path="res://fonts/PixelOperator8.ttf" id="4_br01l"]
[ext_resource type="FontFile" uid="uid://bwt0hh5wmt8jl" path="res://fonts/PixelOperator8-Bold.ttf" id="5_gkote"]
[ext_resource type="Script" path="res://Scripts/pause_audio_options.gd" id="6_w6jy2"]
[ext_resource type="StyleBox" uid="uid://boeouaabx4yhd" path="res://UI/mainmenu_btn_hover.tres" id="6_xl5h2"]
[ext_resource type="StyleBox" uid="uid://dm6cijy2m1uov" path="res://UI/mainmenu_btn_normal.tres" id="7_wok1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqrbq"]
bg_color = Color(0, 0, 0, 0.870588)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1rqci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6n2xm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gn1qn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rlf6n"]

[sub_resource type="Animation" id="Animation_eri8w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_aifvu"]
resource_name = "blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.833]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sk0ok"]
_data = {
"RESET": SubResource("Animation_eri8w"),
"blur": SubResource("Animation_aifvu")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6t6tr")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("2_2xruh")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -324.0
offset_right = 296.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aqrbq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="IndentSpace" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0, 0.8, 1)
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 28
text = "
PAUSED
"
horizontal_alignment = 1

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
z_index = 10
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 3
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rqci")
theme_override_styles/hover = ExtResource("6_xl5h2")
theme_override_styles/pressed = ExtResource("6_xl5h2")
theme_override_styles/normal = ExtResource("7_wok1p")
text = "SAVE"

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
z_index = 10
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 3
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rqci")
theme_override_styles/hover = ExtResource("6_xl5h2")
theme_override_styles/pressed = ExtResource("6_xl5h2")
theme_override_styles/normal = ExtResource("7_wok1p")
text = "LOAD"

[node name="AudioOptions" type="Control" parent="PanelContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("6_w6jy2")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/AudioOptions"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.0
offset_right = 239.0
offset_bottom = 214.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="DisplayOpsLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_gkote")
text = "
-DISPLAY-"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="WindowSizeLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_br01l")
text = "Window Size:"

[node name="WindowSizeOptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6n2xm")

[node name="FullScreenLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_br01l")
text = "Fullscreen:"

[node name="FullScreenButton" type="CheckButton" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_br01l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gn1qn")

[node name="AudioOpsLabel2" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_gkote")
text = "
-AUDIO-"
horizontal_alignment = 1

[node name="mastervolume text" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_br01l")
text = "Master                                                 "

[node name="MasterSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05

[node name="music text" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_br01l")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05

[node name="sfxvolume text" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_br01l")
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05

[node name="Confirm" type="Button" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 3
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_rlf6n")
theme_override_styles/hover = ExtResource("6_xl5h2")
theme_override_styles/pressed = ExtResource("6_xl5h2")
theme_override_styles/normal = ExtResource("7_wok1p")
text = "APPLY"

[node name="iNDENT" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2

[node name="iNDENT2" type="Label" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 3
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rqci")
theme_override_styles/hover = ExtResource("6_xl5h2")
theme_override_styles/pressed = ExtResource("6_xl5h2")
theme_override_styles/normal = ExtResource("7_wok1p")
text = "RESUME"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 3
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rqci")
theme_override_styles/hover = ExtResource("6_xl5h2")
theme_override_styles/pressed = ExtResource("6_xl5h2")
theme_override_styles/normal = ExtResource("7_wok1p")
text = "                        RESTART                        "

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 3
theme_override_fonts/font = ExtResource("5_gkote")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rqci")
theme_override_styles/hover = ExtResource("6_xl5h2")
theme_override_styles/pressed = ExtResource("6_xl5h2")
theme_override_styles/normal = ExtResource("7_wok1p")
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sk0ok")
}

[connection signal="item_selected" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/GridContainer/WindowSizeOptionButton" to="." method="_on_window_size_option_button_item_selected"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/GridContainer/FullScreenButton" to="." method="_on_full_screen_button_toggled"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/MasterSlider" to="PanelContainer/VBoxContainer/AudioOptions" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/MusicSlider" to="PanelContainer/VBoxContainer/AudioOptions" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/SFXSlider" to="PanelContainer/VBoxContainer/AudioOptions" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AudioOptions/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
